# foundation_vs_slop

./: .gitignore  BACKLOG.md  BAKES.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  Cargo.toml  README.md  SEARCH.md  TESTING.md  ai_tuning.ron  tune.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.serena/: project.yml
assets/: dungeon.ron
assets/almond_water_backrooms/: license.txt  scene.gltf
assets/characters/: valkyrie.glb
assets/config/: config.ron  elites_levels.ron  furniture_kenney.ron
assets/death_cap/: death_cap_growth.glb
assets/dialogue/: script.dialogue.ron
assets/dimensional_crab/: dimensional_crab.glb  monster.blend  monster.fbx  monster.mtl
assets/hazmat_locomotion_pack/: Hazmat_Character.fbx  idle.fbx  jump.fbx  left strafe walking.fbx  left turn 90.fbx  right strafe walking.fbx  right turn 90.fbx  walking.fbx
assets/low_poly_flashlight/: low_poly_flashlight.glb
assets/low_poly_furniture/glb/Bathroom/: Bath.glb  Shower.glb  Sink.glb  Toilet Roll Holder.glb  Toilet Rolls.glb  Toilet.glb  Towel Holder.glb
assets/low_poly_furniture/glb/Beds/: Bed Double.glb  Bed Single.glb  Bunk Bed.glb  Triple Bunk Bed.glb
assets/low_poly_furniture/glb/Carpets/: Carpet A.glb  Carpet B.glb  Carpet C.glb
assets/low_poly_furniture/glb/Chairs/: Chair A.glb  Chair B.glb  Chair C.glb  Chair D.glb  Chair E.glb
assets/low_poly_furniture/glb/Doors/: Door A.glb  Door B.glb  Door C.glb  door_frame.glb  door_leaf.glb
assets/low_poly_furniture/glb/Drawers/: Drawer A.glb  Drawer B.glb
assets/low_poly_furniture/glb/Electronics/: Console A.glb  Console B.glb  Console C.glb  Console D.glb  Keyboard.glb  Laptop.glb  Monitor.glb  Pc.glb  Phone.glb  TV A.glb  TV B.glb  Tablet.glb
assets/low_poly_furniture/glb/Kitchen/: Blender.glb  Cupboard A.glb  Cupboard B.glb  Cupboard C.glb  Cupboard D.glb  Cupboard E.glb  (+12 more)
assets/meat_chunks/: meatpack.fbx  meatpack.glb
assets/mushrooms/amethyst_deceiver/: AmethystDeceiver_Growth.glb
assets/mushrooms/blue_pinkgill/: BluePinkgill_Growth.glb
assets/mushrooms/champignon/: Champignon_Growth.glb
assets/mushrooms/chanterelle/: Chanterelle_Growth.glb
assets/mushrooms/chicken_of_the_woods/: ChickenOfTheWoods_Growth.glb
assets/mushrooms/destroying_angel/: DestroyingAngel_Growth.glb
assets/mushrooms/enoki/: Enoki_Growth.glb
assets/mushrooms/fly_agaric/: FlyAgaric_Growth.glb
assets/mushrooms/ink_caps/: InkCap_Growth.glb
assets/mushrooms/king_bolete/: KingBolete_Growth.glb
assets/mushrooms/morel/: Morel_Growth.glb
assets/mushrooms/oyster/: Oyster_Growth.glb
assets/mushrooms/puffball/: Puffball_Growth.glb
assets/mushrooms/rosy_bonnet/: RosyBonnet_Growth.glb
assets/mushrooms/turkey_tail/: TurkeyTail_Growth.glb
assets/placement/: furniture.ron  metropolis.ron
assets/scp150/: scp-150.glb
assets/shaders/: almond_water.wgsl  attack_sphere.wgsl  blood_pool.wgsl  blood_spray.wgsl  health_bar.wgsl  impact_fx.wgsl  mycelia_blend.wgsl  mycelia_floor.wgsl  mycelia_fruit.wgsl  mycelia_gradient.wgsl  mycelia_sim.wgsl  mycelia_wall.wgsl  nest.wgsl  noise.wgsl  smiley.wgsl  tv_static.wgsl  vhs.wgsl
assets/textures/: CREDITS.md
debug_screenshots/: CLAUDE.md  README.md
docs/: level-quality-checklist.md
docs/lore/: 2026-07-12-scp-color-language.md  2026-07-12-scp-equipment-taxonomy.md  2026-07-12-scp-role-taxonomy.md  2026-07-12-scp-universe.md  2026-07-13-backrooms-almond-water.md
docs/rl/: 2026-07-14-rlqd-literature-review.md  2026-07-16-search-rollout-nondeterminism.md
slop/dev_journal/: 2026-07-03-hero-wall-clipping-handoff.md  2026-07-03-wfc-dungeon-onboarding.md  2026-07-05-autogib-physics-gibs.md  2026-07-05-dimensional-crab-swarm.md  2026-07-05-emergent-ai-layer.md  2026-07-06-dungeon-config-and-realistic-rooms.md  2026-07-06-phase3-graph-wfc.md  2026-07-06-wfc-dungeon-session.md  2026-07-07-placement-config-merge-ship.md
slop/ideas/: 2026-07-13-almond-water-resource.md
slop/research/: 2026-07-05-placement-grammar-implementation.md  2026-07-05-placement-grammar-research-vetting.md  2026-07-06-phase3-graph-wfc-plan.md  2026-07-07-audio-optimization-research.md  2026-07-11-backrooms-lighting-review-and-design.md  2026-07-11-mushroom-morph-growth-conversion.md
src/: ai_overlay.rs  audio.rs  audio_tuning.rs  autogib.rs  behavior_tuning.rs  blood_lens.rs  camera.rs  combat.rs  config.rs  crab.rs  devshot.rs  dungeon.rs  elite_overlay.rs  enemies.rs  enemy.rs  flowfield.rs  fog.rs  geom.rs  gore.rs  hair.rs  health.rs  impact_fx.rs  juice.rs  laser.rs  lib.rs  light.rs  main.rs  mold.rs  nest.rs  occlusion.rs  orca.rs  palette.rs  parasite.rs  pathfind.rs  pathfinding.rs  perf_hud.rs  player.rs  psi_vision.rs  region_capture.rs  rng.rs  (+13 more)
src/ai/: brain.rs  diag.rs  drives.rs  faction.rs  field.rs  mod.rs  tuning.rs  utility.rs
src/almond_water/: mod.rs  visual.rs
src/crab/: combat.rs  foraging.rs  mod.rs  movement.rs  setup.rs
src/dialogue/: bubble.rs  load.rs  mod.rs  model.rs  runtime.rs
src/mycelia/: agents.rs  control.rs  field.rs  fruit.rs  grazing.rs  habitat.rs  material.rs  measure.rs  mod.rs  perceptual.rs  pipeline.rs  species.rs  testbed.rs
src/placement/: acceptance.rs  furnish.rs  ir.rs  manifest.rs  mod.rs  scatter.rs  solver.rs
src/placement/solvers/: constraint.rs  metropolis.rs  mod.rs  wfc.rs
src/squad_ai/: actions.rs  audio_eval.rs  audio_genome.rs  audio_search.rs  behavior_eval.rs  behavior_genome.rs  behavior_search.rs  cmaes.rs  coevolve.rs  cohesion.rs  dialogue.rs  evaluate.rs  experience.rs  fairness.rs  genome.rs  interest.rs  level_eval.rs  level_genome.rs  level_quality.rs  level_search.rs  map_elites.rs  mod.rs  parallel.rs  perception.rs  persona.rs  poet.rs  policy.rs  policy_genome.rs  qd.rs  replayability.rs  rl.rs  rl_eval.rs  rl_search.rs  role.rs  surprise.rs  trace.rs  world_genome.rs
src/ui/: boot.rs  hud.rs  mod.rs  pause.rs  settings_menu.rs  state.rs  theme.rs  title.rs  warmup.rs  widgets.rs
tests/: determinism_lint.rs  liveness.rs  playtest_level.rs  replay.rs  rng_guard.rs  search_calibration.rs  search_parallel.rs  visual_capture.rs  wfc_pin.rs
(+58 files in other folders)
