[package]
name = "foundation_vs_slop"
version = "0.1.0"
edition = "2024"

[features]
# Opt-in test/replay scaffolding: gates the headless `sim_harness`, the deterministic snapshot/hash
# accessors, and any test-only visual-decoupling hooks. Off by default so the shipped binary carries
# none of it. Enable with `cargo test --features test-harness`.
test-harness = ["bevy/debug"]

[dependencies]
avian3d = "0.7.0"
bevy = "0.19.0"
ron = "0.12.2"
# CPU glyph rasterization for world-space dialogue bubbles (see `dialogue`): Bevy 0.19's text stack
# (parley/swash) has no public "rasterize a string to a standalone Image" API, and there is no 2D
# camera to host `Text2d`, so bubbles bake their text into an RGBA image sampled on a billboarded 3D
# quad. `ab_glyph` is pure-Rust, no system deps. Green, "Improved Alpha-Tested Magnification for
# Vector Textures" (SIGGRAPH 2007) is the SDF alternative; CPU raster-on-change is the simpler one path.
ab_glyph = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
# Placement grammar (see slop/research/2026-07-05-placement-grammar-implementation.md):
# one reproducible RNG family across the solver stack. rand + rand_chacha resolve to a single rand_core
# 0.10 in the tree. rayon parallelises per-region-independent MCMC (Stage 3).
rand = "0.10"
rand_chacha = "0.10"
rayon = "1"

# Bevy's recommended dev compile-speed profile: keep our own crate light so
# iteration is fast, but optimize dependencies so the engine runs at speed.
[profile.dev]
opt-level = 1
# Debug info is ~84% of a default Bevy debug build (bevyengine/bevy#21938: 803 MB of 961 MB).
# `line-tables-only` keeps filename/line in panic backtraces while dropping type/variable info.
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
# Dependencies dominate target/, and we never step through Bevy internals.
debug = false

# Package overrides above do not reach build scripts or proc macros; those need build-override.
[profile.dev.build-override]
debug = false
