[package]
name = "foundation_vs_slop"
version = "0.1.0"
edition = "2024"

[features]
# Opt-in test/replay scaffolding: gates the headless `sim_harness`, the deterministic snapshot/hash
# accessors, and any test-only visual-decoupling hooks. Off by default so the shipped binary carries
# none of it. Enable with `cargo test --features test-harness`.
test-harness = ["bevy/debug", "dep:clap", "dep:indicatif", "dep:libc"]

# Both binaries are declared explicitly. `src/bin/train.rs` would otherwise be auto-discovered and
# compiled on a plain `cargo check`, where `sim_harness` does not exist — `required-features` is the
# only way to say "this target needs test-harness". Declaring one [[bin]] means declaring them all.
[[bin]]
name = "foundation_vs_slop"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["test-harness"]

[dependencies]
avian3d = "0.7.0"
bevy = "0.19.0"
ron = "0.12.2"
# Bit-exact binary framing for the offline search's worker IPC (`squad_ai::parallel`). RON's shortest-
# decimal `f32` text is NOT a guaranteed bit-identical round-trip across platforms; that 1-ULP perturbation
# flipped the `>=` elitism and the descriptor `cell()` bin, so the parallel archive diverged from the
# inline one on x86 while matching on ARM (issue #44). bincode writes `f32` as its 4 raw IEEE-754 bytes
# (fixed endianness), so genomes and scores cross the process boundary byte-for-byte.
bincode = "1.3"
# CPU glyph rasterization for world-space dialogue bubbles (see `dialogue`): Bevy 0.19's text stack
# (parley/swash) has no public "rasterize a string to a standalone Image" API, and there is no 2D
# camera to host `Text2d`, so bubbles bake their text into an RGBA image sampled on a billboarded 3D
# quad. `ab_glyph` is pure-Rust, no system deps. Green, "Improved Alpha-Tested Magnification for
# Vector Textures" (SIGGRAPH 2007) is the SDF alternative; CPU raster-on-change is the simpler one path.
ab_glyph = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
# Placement grammar (see slop/research/2026-07-05-placement-grammar-implementation.md):
# one reproducible RNG family across the solver stack. rand + rand_chacha resolve to a single rand_core
# 0.10 in the tree. rayon parallelises per-region-independent MCMC (Stage 3).
rand = "0.10"
rand_chacha = "0.10"
rayon = "1"
# CLI + progress for the offline `train` tuning driver ONLY — optional, pulled in by `test-harness` so the
# shipped game binary carries neither. `clap` derives the subcommand parser; `indicatif` renders the live
# per-generation progress bar (ETA + stats) and the multi-bar island display.
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
# Linux `prctl(PR_SET_PDEATHSIG)` so the offline `train` search's island/worker child PROCESSES are killed by
# the kernel the instant the driver dies — for any reason, including a signal that skips Rust destructors.
# Without it a Ctrl+C/kill orphaned the 24 island workers and pegged the box (they outlived their driver).
# `train`-only: pulled in by `test-harness`, never in the shipped game binary. Already resolved in Cargo.lock
# (transitive via bevy), so this adds no new download.
libc = { version = "0.2", optional = true }

# Bevy's recommended dev compile-speed profile: keep our own crate light so
# iteration is fast, but optimize dependencies so the engine runs at speed.
[profile.dev]
opt-level = 1
# Debug info is ~84% of a default Bevy debug build (bevyengine/bevy#21938: 803 MB of 961 MB).
# `line-tables-only` keeps filename/line in panic backtraces while dropping type/variable info.
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
# Dependencies dominate target/, and we never step through Bevy internals.
debug = false

# Package overrides above do not reach build scripts or proc macros; those need build-override.
[profile.dev.build-override]
debug = false

# Shipping/runtime profile. Bevy's recommended release settings: whole-program `thin` LTO plus a single
# codegen unit trade longer link time for faster generated code across the whole 58k-LOC crate (the game
# and the `--release` `train` driver both use this). These flags change scheduling/inlining only — they do
# NOT alter IEEE-754 results (rustc never reassociates floats or contracts FMA without `-ffast-math`), so
# the exact-hash determinism goldens are unaffected. Verified by running the determinism suite in release.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Final-distribution profile: `fat` LTO squeezes a bit more at the cost of even longer link time. Use for
# shipped builds (`cargo build --profile dist`); day-to-day and training stay on `release`.
[profile.dist]
inherits = "release"
lto = "fat"
